Added some changes to raw homework for module 9

--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -18,33 +18,31 @@
     <div class="container">
       <div class="row">
 
-        <div class="col px-0">
-
-          <div class="row text-center flex-md-row justify-content-md-between">
-            <div class="col-12 px-0 header-contain order-md-last col-md-4 justify-content-md-end">
+        <div class="col-12 px-0">
+          <div class="row header-logo-buttons-area justify-content-md-between align-items-md-center">
+            <div class="col-12 header-contain d-flex justify-content-center px-0 order-md-last col-md-4 justify-content-md-end">
               <button type="submit" name="log_in">Log in</button>
               <button type="submit" name="sign_up">Sign up</button>
             </div>
-            <div class="col-12 px-0 order-md-first col-md-3">
+            <div class="col-12 logo-link d-flex px-0 order-md-first col-md-3">
               <a href="#" class="navbar-brand text-reset">URLAUBSGLÜCK</a>
             </div>
-         </div>
-
+          </div>
         </div>
 
-        <div class="col d-block px-0">
-          <h1 class="text-center text-uppercase mb-3 main-title">Share your holiday dreams</h1>
+        <div class="col-12 px-0 d-flex justify-content-center">
+          <h1 class="text-center text-uppercase main-title">Share your holiday dreams</h1>
         </div>
 
-        <div class="col px-0">
+        <div class="col-12 px-0">
           <p class="text-center main-title-caption">And find the perfect partner to fullfill it</p>
         </div>
 
-        <div class="col px-0">
+        <div class="col px-0 d-flex justify-content-center">
           <button class="main-title-button" type="submit" name="find-partner">Find your holiday partner</button>
         </div>
+      </div>
     </div>
-  </div>
   </header>
 
 
@@ -52,14 +50,14 @@
     <div class="container">
 
       <div class="row">
-        <div class="d-flex justify-content-center col-12">
+        <div class="col d-flex justify-content-center">
           <h2 class="text-center meet-a-partner-title">Meet a partner for your best holiday</h2>
         </div>
       </div>
 
       <div class="row">
         <div class="d-flex justify-content-center flex-column col-12">
-          <ul class="partners-list">
+          <ul class="d-md-flex justify-content-md-between mt-md-0 mx-md-auto mb-md-1 partners-list">
             <li class="partners-list-item text-center ml-auto mr-auto">
               <img class="partner-image" src="./img/Bradley_Hunter.png" alt="Partner image">
               <p class="partner-name">Bradley Hunter</p>
@@ -90,11 +88,16 @@
               </p>
             </li>
           </ul>
-          <button class="ml-auto mr-auto" type="submit" name="see-other-partner">See other partners</button>
         </div>
       </div>
 
-    </div>
+      <div class="row">
+        <div class="col d-flex justify-content-center">
+          <button class="partners-list-button ml-auto mr-auto" type="submit" name="see-other-partner">See other partners</button>
+        </div>
+      </div>
+
+      </div>
 
   </main>
 
