Ammended buttons, some props  in css shifted to html classes

--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -21,11 +21,11 @@
         <div class="col-12 px-0">
           <div class="row header-logo-buttons-area justify-content-md-between align-items-md-center">
             <div class="col-12 header-contain d-flex justify-content-center px-0 order-md-last col-md-4 justify-content-md-end">
-              <button type="submit" name="log_in">Log in</button>
-              <button type="submit" name="sign_up">Sign up</button>
+              <button class="px-3" type="submit" name="log_in">Log in</button>
+              <button class="px-3" type="submit" name="sign_up">Sign up</button>
             </div>
             <div class="col-12 logo-link d-flex px-0 order-md-first col-md-3">
-              <a href="#" class="navbar-brand text-reset">URLAUBSGLÜCK</a>
+              <a href="#" class="navbar-brand text-reset m-0 p-0">URLAUBSGLÜCK</a>
             </div>
           </div>
         </div>
@@ -39,7 +39,7 @@
         </div>
 
         <div class="col px-0 d-flex justify-content-center">
-          <button class="main-title-button" type="submit" name="find-partner">Find your holiday partner</button>
+          <button class="main-title-button px-5 px-md-3" type="submit" name="find-partner">Find your holiday partner</button>
         </div>
       </div>
     </div>
@@ -50,40 +50,40 @@
     <div class="container">
 
       <div class="row">
-        <div class="col d-flex justify-content-center">
+        <div class="col d-flex justify-content-center mb-md-6">
           <h2 class="text-center meet-a-partner-title">Meet a partner for your best holiday</h2>
         </div>
       </div>
 
       <div class="row">
         <div class="d-flex justify-content-center flex-column col-12">
-          <ul class="d-md-flex justify-content-md-between mt-md-0 mx-md-auto mb-md-1 partners-list">
+          <ul class="d-md-flex list-unstyled justify-content-md-between p-0 mt-md-0 mx-md-auto mb-md-1 partners-list">
             <li class="partners-list-item text-center ml-auto mr-auto">
-              <img class="partner-image" src="./img/Bradley_Hunter.png" alt="Partner image">
-              <p class="partner-name">Bradley Hunter</p>
-              <p class="partner-description">
+              <img class="partner-image mb-3" src="./img/Bradley_Hunter.png" alt="Partner image">
+              <p class="partner-name m-0 mb-3">Bradley Hunter</p>
+              <p class="partner-description m-0 mb-4">
                 Based in Chicago. I love playing tennis and loud music
               </p>
             </li>
             <li class="partners-list-item text-center ml-auto mr-auto">
-              <img class="partner-image" src="./img/Lucas_Marsha.png" alt="Partner image">
-              <p class="partner-name">Lucas Marsha</p>
-              <p class="partner-description">
+              <img class="partner-image mb-3" src="./img/Lucas_Marsha.png" alt="Partner image">
+              <p class="partner-name m-0 mb-3">Lucas Marsha</p>
+              <p class="partner-description m-0 mb-4">
                 I get my inspiration from nature and objects around me. I have a passion to colours, typography and
                 skateboards.
               </p>
             </li>
             <li class="partners-list-item text-center ml-auto mr-auto">
-              <img class="partner-image" src="./img/Heater_Walker.png" alt="Partner image">
-              <p class="partner-name">Heather Walker</p>
-              <p class="partner-description">
+              <img class="partner-image mb-3" src="./img/Heater_Walker.png" alt="Partner image">
+              <p class="partner-name m-0 mb-3">Heather Walker</p>
+              <p class="partner-description m-0 mb-4">
                 I'm a happy person that loves cats and climbing on mountains.
               </p>
             </li>
             <li class="partners-list-item text-center ml-auto mr-auto">
-              <img class="partner-image" src="./img/Bradley_Hunter_W.png" alt="Partner image">
-              <p class="partner-name">Bradley Hunter</p>
-              <p class="partner-description">
+              <img class="partner-image mb-3" src="./img/Bradley_Hunter_W.png" alt="Partner image">
+              <p class="partner-name m-0 mb-3">Bradley Hunter</p>
+              <p class="partner-description m-0 mb-4">
                 Based in Chicago. I love playing tennis and loud music
               </p>
             </li>
