--- a/html-css/module-09/index.html
+++ b/html-css/module-09/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
   <title>Homework Module 9</title>
@@ -16,15 +16,15 @@
 
   <header class="header">
     <div class="container">
-      <div class="row">
+      <div class="row mx-0">
 
         <div class="col-12 px-0">
-          <div class="row header-logo-buttons-area justify-content-md-between align-items-md-center">
-            <div class="col-12 header-contain d-flex justify-content-center px-0 order-md-last col-md-4 justify-content-md-end">
+          <div class="row header-logo-buttons-area mx-0 justify-content-md-between align-items-md-center">
+            <div class="col-12 header-contain d-flex justify-content-center px-0 order-md-last col-md-4 justify-content-md-end col-lg-3">
               <button class="px-3" type="submit" name="log_in">Log in</button>
               <button class="px-3" type="submit" name="sign_up">Sign up</button>
             </div>
-            <div class="col-12 logo-link d-flex px-0 order-md-first col-md-3">
+            <div class="col-12 logo-link d-flex px-0 order-md-first col-md-4 col-lg-3">
               <a href="#" class="navbar-brand text-reset m-0 p-0">URLAUBSGLÜCK</a>
             </div>
           </div>
@@ -54,18 +54,15 @@
           <h2 class="text-center meet-a-partner-title">Meet a partner for your best holiday</h2>
         </div>
       </div>
-
-      <div class="row">
-        <div class="d-flex justify-content-center flex-column col-12">
-          <ul class="d-md-flex list-unstyled justify-content-md-between p-0 mt-md-0 mx-md-auto mb-md-1 partners-list">
-            <li class="partners-list-item text-center ml-auto mr-auto">
+          <ul class="d-md-flex flex-wrap list-unstyled p-0 mt-md-0 mx-md-auto mb-md-1 partners-list">
+            <li class="col-12 col-md-6 col-lg-3 partners-list-item text-center mx-auto">
               <img class="partner-image mb-3" src="./img/Bradley_Hunter.png" alt="Partner image">
               <p class="partner-name m-0 mb-3">Bradley Hunter</p>
               <p class="partner-description m-0 mb-4">
                 Based in Chicago. I love playing tennis and loud music
               </p>
             </li>
-            <li class="partners-list-item text-center ml-auto mr-auto">
+            <li class="col-12 col-md-6 col-lg-3 partners-list-item text-center mx-auto">
               <img class="partner-image mb-3" src="./img/Lucas_Marsha.png" alt="Partner image">
               <p class="partner-name m-0 mb-3">Lucas Marsha</p>
               <p class="partner-description m-0 mb-4">
@@ -73,14 +70,14 @@
                 skateboards.
               </p>
             </li>
-            <li class="partners-list-item text-center ml-auto mr-auto">
+            <li class="col-12 col-md-6 col-lg-3 partners-list-item text-center mx-auto">
               <img class="partner-image mb-3" src="./img/Heater_Walker.png" alt="Partner image">
               <p class="partner-name m-0 mb-3">Heather Walker</p>
               <p class="partner-description m-0 mb-4">
                 I'm a happy person that loves cats and climbing on mountains.
               </p>
             </li>
-            <li class="partners-list-item text-center ml-auto mr-auto">
+            <li class="col-12 col-md-6 col-lg-3 partners-list-item text-center mx-auto">
               <img class="partner-image mb-3" src="./img/Bradley_Hunter_W.png" alt="Partner image">
               <p class="partner-name m-0 mb-3">Bradley Hunter</p>
               <p class="partner-description m-0 mb-4">
@@ -88,8 +85,6 @@
               </p>
             </li>
           </ul>
-        </div>
-      </div>
 
       <div class="row">
         <div class="col d-flex justify-content-center">
