Amended svg links

--- a/html-css/module-10/index.html
+++ b/html-css/module-10/index.html
@@ -147,7 +147,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.facebook.com" class="link hover__link hover__link_facebook" target="_blank">
                   <svg class="hover__icon">
-                    <use href="../img/icons/social-icons/symbol-defs.svg#facebook-icon">
+                    <use href="img/icons/social-icons/symbol-defs.svg#facebook-icon">
                     </use>
                   </svg>
                 </a>
@@ -155,7 +155,7 @@
               <li class="hover__item_socials">
                 <a href="https://twitter.com" class="link hover__link hover__link_twitter" target="_blank">
                   <svg class="hover__icon">
-                    <use href="../img/icons/social-icons/symbol-defs.svg#instagram-icon">
+                    <use href="img/icons/social-icons/symbol-defs.svg#instagram-icon">
                     </use>
                   </svg>
                 </a>
@@ -163,7 +163,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.pinterest.com" class="link hover__link hover__link_pinterest" target="_blank">
                   <svg class="hover__icon">
-                    <use href="../img/icons/social-icons/symbol-defs.svg#pin-icon">
+                    <use href="img/icons/social-icons/symbol-defs.svg#pin-icon">
                     </use>
                   </svg>
                 </a>
@@ -171,7 +171,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.instagram.com" class="link hover__link hover__link_instagram" target="_blank">
                   <svg class="hover__icon">
-                    <use href="../img/icons/social-icons/symbol-defs.svg#twitter-icon">
+                    <use href="img/icons/social-icons/symbol-defs.svg#twitter-icon">
                     </use>
                   </svg>
                 </a>
@@ -189,7 +189,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.facebook.com" class="link hover__link hover__link_facebook" target="_blank">
                   <svg class="hover__icon">
-                    <use href="../img/icons/social-icons/symbol-defs.svg#facebook-icon">
+                    <use href="img/icons/social-icons/symbol-defs.svg#facebook-icon">
                     </use>
                   </svg>
                 </a>
@@ -197,7 +197,7 @@
               <li class="hover__item_socials">
                 <a href="https://twitter.com" class="link hover__link hover__link_twitter" target="_blank">
                   <svg class="hover__icon">
-                    <use href="../img/icons/social-icons/symbol-defs.svg#instagram-icon">
+                    <use href="img/icons/social-icons/symbol-defs.svg#instagram-icon">
                     </use>
                   </svg>
                 </a>
@@ -205,7 +205,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.pinterest.com" class="link hover__link hover__link_pinterest" target="_blank">
                   <svg class="hover__icon">
-                    <use href="../img/icons/social-icons/symbol-defs.svg#pin-icon">
+                    <use href="img/icons/social-icons/symbol-defs.svg#pin-icon">
                     </use>
                   </svg>
                 </a>
@@ -213,7 +213,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.instagram.com" class="link hover__link hover__link_instagram" target="_blank">
                   <svg class="hover__icon">
-                    <use href="../img/icons/social-icons/symbol-defs.svg#twitter-icon">
+                    <use href="img/icons/social-icons/symbol-defs.svg#twitter-icon">
                     </use>
                   </svg>
                 </a>
