Some more updates

--- a/html-css/module-11/src/index.html
+++ b/html-css/module-11/src/index.html
@@ -16,7 +16,7 @@
     <div class="container header__container">
       <nav class="header__nav">
         <a href="#" class="link header__logo">MoGo</a>
-        <ul class="list header__list">
+        <ul class="header__list">
           <li class="header__item underlined-hovered color-hover"><a class="link" href="#">About</a></li>
           <li class="header__item underlined-hovered color-hover"><a class="link" href="#">Service</a></li>
           <li class="header__item underlined-hovered color-hover"><a class="link" href="#">Work</a></li>
