Arrange rest of the styles

--- a/html-css/module-11/src/index.html
+++ b/html-css/module-11/src/index.html
@@ -98,14 +98,14 @@
       </p>
       <ul class="list team__list">
         <li class="team__item">
-          <img src="img/matthew_dix.png" srcset="img/matthew_dix.png 2x" alt="Member's Image" class="team__image"
+          <img src="images/matthew_dix.png" srcset="images/matthew_dix.png 2x" alt="Member's Image" class="team__image"
             width="380" height="470">
           <div class="team__hover">
             <ul class="list hover__list_socials">
               <li class="hover__item_socials">
                 <a href="https://www.facebook.com" class="link hover__link hover__link_facebook" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#facebook-icon">
+                    <use href="images/icons/social-icons-sprite.svg#facebook-icon">
                     </use>
                   </svg>
                 </a>
@@ -113,7 +113,7 @@
               <li class="hover__item_socials">
                 <a href="https://twitter.com" class="link hover__link hover__link_twitter" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#instagram-icon">
+                    <use href="images/icons/social-icons-sprite.svg#instagram-icon">
                     </use>
                   </svg>
                 </a>
@@ -121,7 +121,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.pinterest.com" class="link hover__link hover__link_pinterest" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#pin-icon">
+                    <use href="images/icons/social-icons-sprite.svg#pin-icon">
                     </use>
                   </svg>
                 </a>
@@ -129,7 +129,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.instagram.com" class="link hover__link hover__link_instagram" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#twitter-icon">
+                    <use href="images/icons/social-icons-sprite.svg#twitter-icon">
                     </use>
                   </svg>
                 </a>
@@ -140,14 +140,14 @@
           <p class="team__title_caption">Graphic Design</p>
         </li>
         <li class="team__item">
-          <img src="img/christopher_campbell.png" srcset="img/christopher_campbell.png 2x" alt="Member's Image"
+          <img src="images/christopher_campbell.png" srcset="images/christopher_campbell.png 2x" alt="Member's Image"
             class="team__image" width="380" height="470">
           <div class="team__hover">
             <ul class="list hover__list_socials">
               <li class="hover__item_socials">
                 <a href="https://www.facebook.com" class="link hover__link hover__link_facebook" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#facebook-icon">
+                    <use href="images/icons/social-icons-sprite.svg#facebook-icon">
                     </use>
                   </svg>
                 </a>
@@ -155,7 +155,7 @@
               <li class="hover__item_socials">
                 <a href="https://twitter.com" class="link hover__link hover__link_twitter" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#instagram-icon">
+                    <use href="images/icons/social-icons-sprite.svg#instagram-icon">
                     </use>
                   </svg>
                 </a>
@@ -163,7 +163,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.pinterest.com" class="link hover__link hover__link_pinterest" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#pin-icon">
+                    <use href="images/icons/social-icons-sprite.svg#pin-icon">
                     </use>
                   </svg>
                 </a>
@@ -171,7 +171,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.instagram.com" class="link hover__link hover__link_instagram" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#twitter-icon">
+                    <use href="images/icons/social-icons-sprite.svg#twitter-icon">
                     </use>
                   </svg>
                 </a>
@@ -182,14 +182,14 @@
           <p class="team__title_caption">Branding/UX design</p>
         </li>
         <li class="team__item">
-          <img src="img/michael_fertig.png" srcset="img/michael_fertig.png 2x" alt="Member's Image" class="team__image"
+          <img src="images/michael_fertig.png" srcset="images/michael_fertig.png 2x" alt="Member's Image" class="team__image"
             width="380" height="470">
           <div class="team__hover">
             <ul class="list hover__list_socials">
               <li class="hover__item_socials">
                 <a href="https://www.facebook.com" class="link hover__link hover__link_facebook" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#facebook-icon">
+                    <use href="images/icons/social-icons-sprite.svg#facebook-icon">
                     </use>
                   </svg>
                 </a>
@@ -197,7 +197,7 @@
               <li class="hover__item_socials">
                 <a href="https://twitter.com" class="link hover__link hover__link_twitter" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#instagram-icon">
+                    <use href="images/icons/social-icons-sprite.svg#instagram-icon">
                     </use>
                   </svg>
                 </a>
@@ -205,7 +205,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.pinterest.com" class="link hover__link hover__link_pinterest" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#pin-icon">
+                    <use href="images/icons/social-icons-sprite.svg#pin-icon">
                     </use>
                   </svg>
                 </a>
@@ -213,7 +213,7 @@
               <li class="hover__item_socials">
                 <a href="https://www.instagram.com" class="link hover__link hover__link_instagram" target="_blank">
                   <svg class="hover__icon">
-                    <use href="img/icons/social-icons/symbol-defs.svg#twitter-icon">
+                    <use href="images/icons/social-icons-sprite.svg#twitter-icon">
                     </use>
                   </svg>
                 </a>
