--- a/javascript/goit-js-hw-08/index.html
+++ b/javascript/goit-js-hw-08/index.html
@@ -13,13 +13,14 @@
 
     <!--
       Модальное окно для полноразмерного изображения
-      Для того чтобы открыть, необходимо добавить на div.lightbox CSS-класс is-open
+      Для того чтобы открыть, необходимо добавить на div.lightbox
+      CSS-класс is-open
     -->
     <div class="lightbox js-lightbox">
       <div class="lightbox__overlay"></div>
 
       <div class="lightbox__content">
-        <img class="lightbox__image" src="" alt="" />
+        <img class="lightbox__image" src="#" alt="" />
       </div>
 
       <button
@@ -29,7 +30,7 @@
       ></button>
     </div>
 
-    <script src="gallery-items.js" type="module"></script>
-    <script src="../js/task-1.js" type="module"></script>
+    <script src="/js/gallery-items.js" type="module"></script>
+    <script src="/js/task-1.js" type="module"></script>
   </body>
 </html>
