--- a/javascript/goit-js-hw-08/index.html
+++ b/javascript/goit-js-hw-08/index.html
@@ -31,7 +31,7 @@
       ></button>
     </div>
 
-    <script src="/js/gallery-items.js" type="module"></script>
-    <script src="/js/task-1.js" type="module"></script>
+    <script src="./js/gallery-items.js" type="module"></script>
+    <script src="./js/task-1.js" type="module"></script>
   </body>
 </html>
