--- a/javascript/goit-js-hw-11-timer/index.html
+++ b/javascript/goit-js-hw-11-timer/index.html
@@ -3,34 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>HW-11 Timer</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="message-box">
+      <h2 class="countdouwn-end-message">Time is up!</h2>
+    </div>
     <div class="timer" id="timer-1">
       <div class="field">
-        <span class="value" data-value="days">11</span>
+        <span class="value" data-value="days">- -</span>
         <span class="label">Days</span>
       </div>
 
       <div class="field">
-        <span class="value" data-value="hours">11</span>
+        <span class="value" data-value="hours">- -</span>
         <span class="label">Hours</span>
       </div>
 
       <div class="field">
-        <span class="value" data-value="mins">11</span>
+        <span class="value" data-value="mins">- -</span>
         <span class="label">Minutes</span>
       </div>
 
       <div class="field">
-        <span class="value" data-value="secs">11</span>
+        <span class="value" data-value="secs">- -</span>
         <span class="label">Seconds</span>
       </div>
     </div>
 
-    <!-- <script type="module" src="./timer.js"></script> -->
     <script type="module" src="./index.js"></script>
-    <!-- <script type="module" src="./formulas.js"></script> -->
   </body>
 </html>
