Solved problems for HW-12 countries, still working on pnotify

--- a/javascript/goit-js-hw-12-countries/src/index.html
+++ b/javascript/goit-js-hw-12-countries/src/index.html
@@ -18,7 +18,8 @@
     </form>
 
     <ul class="country-list" id="country-list"></ul>
-    <script type="module" src="./index.js"></script>
+    <div class="matched-country-box" id="matched-country-box"></div>
+    <!-- <script type="module" src="./index.js"></script> -->
     <!--
       если убираю type="module", ругается на index.js:
        - Uncaught SyntaxError: Cannot use import statement outside a module;
