--- a/javascript/goit-js-hw-13-image-finder/src/index.html
+++ b/javascript/goit-js-hw-13-image-finder/src/index.html
@@ -24,6 +24,17 @@
     <ul class="gallery" id="gallery">
       <!-- Список <li> с карточками изображений -->
     </ul>
-    <div class="scroll-bottom-line"></div>
+    <div class="scroll-bottom-line" id="scroll-bottom-line"></div>
+
+    <!--
+      Модальное окно для полноразмерного изображения
+    -->
+    <div class="lightbox js-lightbox">
+      <div class="lightbox__overlay"></div>
+
+      <div class="lightbox__content">
+        <img class="lightbox__image" src="#" alt="" />
+      </div>
+    </div>
   </body>
 </html>
